--- a/docs/milestones/2026-02-18.md
+++ b/docs/milestones/2026-02-18.md
@@ -1,45 +1,106 @@
-# 自律稼働ロードマップ：2026年02月18日
+# 自律稼働ロードマップ：2026年02月18日（Total Master Roadmap）
 
-本ドキュメントは、VLogシステムを単なる「コードの集合体」から「自律稼働する製品」へと昇華させるための要件定義書です。技術的な詳細は背後に隠し、**「システムが何を実現し、どのような状態であれば完成と言えるのか」**を明確にします。
+本ドキュメントは、VLogシステムを **「神ごとき自律性（God-Like Autonomy）」** と **「絶対的な現実（Absolute Physical Reality）」** の両立へと導くための、最終的かつ包括的なマイルストーン定義書です。
+これまでの全ユースケース、技術基準、品質指標を統合し、プロジェクトの「完成（Done）」を定義する唯一の真実（Single Source of Truth）とします。
 
 ```mermaid
 graph TD
-    A[監視コア] -->|サンプリング| B(性能管理)
-    A -->|録音開始| C(音声解析)
-    C -->|データ確定| D(処理待ち行列)
-    D -->|AI処理| E{Gemini API}
-    E -->|成功| F[物語資産の生成]
-    E -->|一時的エラー| G[自動再試行]
-    G -->|復旧待ち| E
-    B -->|記録| H[(稼働ログ)]
-    A -->|死活監視| I[自己修復ループ]
-    I -->|ストレージ逼迫| J[自動クリーンアップ]
+    subgraph "Sensory Layer (Input)"
+        A1[Discord Monitor] -->|Voice Activity| B1(Stream Buffer)
+        A2[System Audio] -->|Loopback| B1
+        A3[Wearable Sync] -->|Visual/Audio| B2(Media Pipeline)
+        A4[Mobile Upload] -->|Cloud Watch| B2
+    end
+    
+    subgraph "Cortex Layer (Processing)"
+        B1 -->|VAD/Denoise| C1[Whisper Large-v3]
+        B2 -->|Pre-process| C1
+        C1 -->|Transcript| D1[Narrative Engine]
+        D1 -->|Contet/Memory| D2{Gemini 3 Flash}
+        D2 -->|Show, Don't Tell| E1[Novel Draft]
+        D2 -->|Aesthetic Prompt| E2[Z-Image-Turbo]
+    end
+    
+    subgraph "Critic Layer (Quality Assurance)"
+        E1 -->|Review| F1[Curator Logic]
+        E2 -->|Review| F1
+        F1 -->|Score < 3| G1[Auto-Correction]
+        G1 --> D2
+        F1 -->|Score >= 3| H1[Archive & Publish]
+    end
+
+    subgraph "Autonomic Nervous System (Ops)"
+        I1[Health Monitor] -->|Heartbeat| I2[Self-Healing]
+        I2 -->|Crash Detect| I3[Emergency Restart]
+        I3 -->|State Recovery| A1
+    end
 ```
 
-## 1. 止まらない・壊れない（稼働の継続性）
+## 1. Zero-Ops / Crash-Only Infrastructure (基盤の完全自律)
 
-システムがユーザーの助けを借りずに動き続けるための基準です。
+人間がシステムの「世話」をする必要を完全に排除し、電源が供給される限り永続的に稼働する生命体のようなインフラを構築します。
 
-- [ ] **「健康状態」の自動モニタリング**
-    - システムの負荷（CPU、メモリ使用量）を常時監視し、異常があればログに記録します。
-    - **達成基準**: 監視そのものがPCの動作を重くしないこと（処理時間は1回10ms以内）。
-- [ ] **アトミックなデータ保存**
-    - 保存中にPCが落ちてもデータが壊れないよう、一時ファイルを作ってから一瞬で入れ替える方式を採用します。
+- [] **自律監視と自己修復**
+    - [] `vlog-daily.service` および `vlog.service` が、OS起動と同時に100%確実に立ち上がること。
+    - [] プロセスが予期せず終了（Crash/Kill）した場合、`systemd` が10秒以内に再起動し、直前のチェックポイント（30秒以内のロス）から処理を再開すること。
+    - [] **メモリ自浄作用**: メモリ使用量が閾値（例: 80%）を超えた場合、安全なタイミングで自ら再起動し、リソースを開放すること（OOM Killer発動前の自衛）。
 
+- [] **ACID準拠のデータ整合性**
+    - [] 全てのファイル書き込み（録音、ログ、DB）に対し、`write -> fsync -> rename` パターンを徹底し、電源断によるデータ破損（torn writes）を物理的に防ぐこと。
+    - [] 処理中のタスク（Pending）と完了したタスク（Done）の状態遷移が、不可分操作として管理されること。
 
-## 2. 物語の品質を守る（処理精度と一貫性）
+- [] **Hardware-Aware Performance**
+    - [] GPU (CUDA) と CPU の負荷を監視し、`Z-Image-Turbo` などの重い処理が、ユーザーのフォアグラウンド作業（ゲーム、ブラウジング）の FPS に 1% 以上の影響を与えないこと。
 
-記録された「日常」を、質の高い「物語」として残し続けるための基準です。
+## 2. Narrative Engine & Quality Assurance (物語生成の極致)
 
-- [ ] **耳の良さの自動判定 (Audio-QA)**
-    - 録音された音声が正しく文字に起こせているかを自動でテストします。
-    - **達成基準**: 静かな場所なら97%以上、騒がしい場所でも88%以上の正確さを維持すること。
+単なるログではなく、読み手が感情移入できる「文学作品」としての品質を、AI自身が担保します。
 
-## 3. 手間をかけさせない（自動化と運用）
+- [] **Curator Logic の完全実装**
+    - [] 全ての生成されたチャプターに対し、`prompts.yaml` 定義の `curator` が自動レビューを実行すること。
+    - [] **正規分布スコアリング**: 評価が偏らず、厳格な基準（3:Standard, 4:Ecellent, 5:Masterpiece）に基づいてスコアリングされること。
+    - [] **自動推敲ループ**: スコアが「2 (Below Average)」以下の場合、異なる温度パラメータ（Temperature）または視点を変えて再生成を試みる自己修正機能を備えること。
 
-設定や確認の作業を極限まで減らし、放置していても状況がわかるようにします。
+- [] **Absolute Physical Reality (脱バーチャル)**
+    - [] **Keyword Filter**: `config.yaml` の `prompt_filters` を通過できない単語（VR, HMD, Avatar等）が含まれた場合、即座に棄却・再生成すること。
+    - [] **Physical Grounding**: 「アバターの姿」ではなく「魂の形状」、「ワールドのポリゴン」ではなく「その場の空気感」として描写されていることを、embedding類似度判定などで保証すること。
 
-- [ ] **コマンド一つで現在の状況を把握**
-    - `vlog-status` と打つだけで、ここ24時間の稼働時間や、処理が終わっていないデータの数が一目でわかる仕組みを作ります。
-- [ ] **最初の一歩を自動化するセットアップ**
-    - `cargo run -- setup` で、必要なフォルダの作成からマイクの設定までを対話形式で完結させます。
+- [] **Cinematic Visuals**
+    - [] `Z-Image-Turbo` (Flow Matching) により、単なる説明図ではなく、映画のワンシーン（Golden Hour, Cinematic Lighting）のような情緒的価値のある挿絵を100%生成すること。
+    - [] アスペクト比、解像度、構図が、VLog全体のトーン＆マナーと完全に一致していること。
+
+## 3. Universal Input Integration (全感覚の統合)
+
+あらゆるソースからの入力を、ひとつのタイムライン（物語）へと統合します。
+
+- [] **Discord (The Social Layer)**
+    - [] 起動を検知してから **10秒以内** に録音体制へ移行すること。
+    - [] WER (Word Error Rate) **5.0%以下** の精度で、多話者・重複発話を分離して文字起こしできること。
+
+- [ ] **VRChat / Desktop Audio (The Physical Layer)**
+    - [ ] 環境音（BGM、SE）と音声を分離、あるいは適切なバランスでミックスし、「その場にいた」臨場感を再現すること。
+    - [ ] 無音区間（Silence）を **99%の精度** で検出し、ストレージ容量とAPIコストを浪費しないこと。
+
+- [] **Mobile & Wearable (The Etended Layer)**
+    - [] クラウドストレージ（iCloud/Drive）へのファイル追加を **5秒以内** に検知する `File Watcher` の実装。
+    - [] 異なるサンプリングレートやフォーマットの音声ファイルを、統一された `16kHz Mono` 規格へ自動正規化（Normalize）すること。
+
+## 4. Definition of Done (完了の定義: チェックリスト)
+
+このプロジェクトが「完成」したと宣言するための、最終的な合否判定リストです。
+
+### System Stability
+- [ ] 168時間（1週間）の連続稼働テストを、エラーログ出力なし（Warn以上なし）でクリアした。
+- [ ] 意図的にプロセスを `kill` しても、データの欠損なく復旧することを確認した。
+
+### Narrative Quality
+- [ ] 直近100件の生成小説において、Curatorスコアの平均が **3.5以上** である。
+- [ ] VR/メタバース用語の混入が **0件** である。
+
+### User Eperience
+- [ ] ユーザーが行う操作が「ただ生きること（Discordで話す、ゲームをする、出かける）」以外に **一切存在しない**。
+- [ ] 生成された日報（HTML/Markdown）が、毎朝所定の時間に確実にデリバリーされている。
+
+---
+**Final Verdict**: 全てのチェックボックスが埋まった瞬間、VLogは「開発」を終え、「生活」の一部となります。
+
