docs: update milestones and system specifications

--- a/docs/milestones/2026-02-19.md
+++ b/docs/milestones/2026-02-19.md
@@ -42,7 +42,7 @@
 23. [ ] ファイル名を `vlog_audio_{timestamp}.wav` とし、一時ディレクトリへのアトミックな書き込みを行う。
 24. [ ] 保存完了後、`shutil.move` を用いて Ubuntu 共有フォルダへファイルを移動。転送中の読み取りを防ぐ。
 25. [ ] 全ての例外をキャッチせず、プロセスのクリーンな死を選択する `Crash-Only` 思想の例外ハンドラを置く。
-26. [ ] `bootstrap.ps1` を作成し、環境変数設定と `uv run` の無限再試行ループを PowerShell で記述する。
+26. [x] `windows/run.bat` を単一エントリポイントとして実装し、環境解決・ビルド・監視再起動（無限再試行）を集約する。
 27. [ ] Windows タスクスケジューラに「ユーザーのログオンに関わらず実行」オプションで登録する。
 28. [ ] プロセスの優先度を `HighPriority` に設定し、他アプリの負荷による録音の瞬きを防止する。
 29: [ ] 起動時に共有フォルダ（SMB/WSL）の接続状態をチェックし、未接続なら exponential backoff で再試行する。
