Pre-Cleanup: Committing current state before Zero-Fat Cleanup

--- a/docs/milestones/2026-02-19.md
+++ b/docs/milestones/2026-02-19.md
@@ -49,10 +49,10 @@
 30: [ ] Windows 側でのメモリ使用量を 20MB 以下に抑えるため、バッファサイズのチューニングを行う。
 
 ### Phase 3: Windows Activity Logger (実存の軌跡)
-31. [ ] Rust で `target: x86_64-pc-windows-msvc` 向けの軽量常駐エージェントを新規作成する。
-32. [ ] `windows` クレートを最小構成（Win32_UI, Win32_Foundation）でコンパイルし、ビルドを軽量化する。
-33. [ ] Windows メッセージループを監視し、ウィンドウのフォアグラウンド切り替えイベントを検知する。
-34. [ ] ウィンドウタイトル取得時、非英語文字の文字化けを防ぐため、広域文字（UTF-16）から UTF-8 への変換を厳密に行う。
+31. [x] Rust で `target: x86_64-pc-windows-msvc` 向けの軽量常駐エージェントを新規作成する。
+32. [x] `windows` クレートを最小構成（Win32_UI, Win32_Foundation）でコンパイルし、ビルドを軽量化する。
+33. [x] Windows メッセージループを監視し、ウィンドウのフォアグラウンド切り替えイベントを検知する。
+34. [x] ウィンドウタイトル取得時、非英語文字の文字化けを防ぐため、広域文字（UTF-16）から UTF-8 への変換を厳密に行う。
 35. [ ] `GetProcessId` を併用し、アプリ名（exe）とタイトルのペアでアクティビティを記録する。
 36. [ ] 同一アプリ内でのタイトル変更を重複除去（Deduplication）し、ログの肥大化を抑制する。
 37. [ ] `UWP` アプリケーションのメディア情報を取得するための `SMTC` リスナーをバックグラウンドで走査する。
@@ -143,8 +143,8 @@
 - [ ] **Query Performance**: 1年分（約1,000万件）のイベント群に対する複雑な相関クエリを 200ms 以内に完了させる。
 
 ### 9-3. Reliability (信頼性の証)
-- [ ] **Zero-Intervention Recovery**: プロセス強制終了後、外部ツールなしで 5秒以内 に元のコンテキストを復元して再開すること。
-- [ ] **Disconnected Operation**: 通信遮断中もローカルバッファに全データを保持し、復帰後に順序を保ったまま完全同期すること。
+- [x] **Zero-Intervention Recovery**: プロセス強制終了後、外部ツールなしで 5秒以内 に元のコンテキストを復元して再開すること。
+- [x] **Disconnected Operation**: 通信遮断中もローカルバッファに全データを保持し、復帰後に順序を保ったまま完全同期すること。
 - [ ] **Longevity**: 1ヶ月間の連続稼働において、物理メモリ・仮想メモリ共に単調増加が一切観測されないこと。
 - [ ] **Data Immutability**: 一度保存されたログは物理的に削除・改ざんされない構造（Append-only）であることをプログラムレベルで保証する。
 
