docs: formalize FLAC/WAV audio engineering specification and milestones

--- a/docs/milestones/2026-02-19.md
+++ b/docs/milestones/2026-02-19.md
@@ -15,45 +15,45 @@
 ## 100 Atomic Engineering Milestones
 
 ### Phase 1: Foundation & Iron Rules (基盤と鉄の掟)
-1. [ ] `Cargo.toml` に `anyhow`, `thiserror` を追加し、独自エラー型のボイラープレートを排除する。
-2. [ ] `src/main.rs` のエントリポイントを `tokio::main` で非同期化し、ブロッキングIOの混入を防ぐガードを立てる。
-3. [ ] `src/domain/event.rs` に `LifeEvent` 構造体を定義し、データ整合性のための `Serial` 派生を実装する。
-4. [ ] `LifeEvent` に `id: Uuid` (v7) を採用し、データベース挿入前の時系列順序をアプリレベルで保証する。
-5. [ ] `LifeEvent` に `source: SourceType` enum を導入し、物理デバイスと仮想イベントの出自を厳格に正規化する。
-6. [ ] `SourceType` に `WindowsAudio`, `WindowsActivity`, `UbuntuMonitor` を定義し、マッチングの網羅性を担保する。
-7. [ ] `tracing` クレートによる構造化ログを導入し、`println!` による標準出力汚染を完全に禁止する。
-8. [ ] `tracing-appender` を使用し、日次でのログローテーションと圧縮保存をバックグラウンドで開始する。
-9. [ ] `src/infrastructure/settings.rs` を実装し、環境変数と `config.yaml` の階層的マージを可能にする。
-10. [ ] `Settings::new()` にて、欠落した設定項目に対する安全なフォールバックと警告通知ロジックを実装する。
-11. [ ] `panic!` の発生源を `grep` で走査し、全ての未回復エラーを `anyhow::Result` 伝播へリファクタリングする。
-12. [ ] CI設定に `clippy` の `unwrap_used` 制限を追加し、強制的に `expect` または `match` を要求する。
-13. [ ] `src/use_cases/` のモジュール境界を再定義し、副作用を持つ関数の注入（DI）を徹底する。
-14. [ ] 外部IO（ファイル/ネットワーク）を `Trait` で抽象化し、ビジネスロジックの単体テスト可能性を100%にする。
+1. [x] `Cargo.toml` に `anyhow`, `thiserror` を追加し、独自エラー型のボイラープレートを排除する。
+2. [x] `src/main.rs` のエントリポイントを `tokio::main` で非同期化し、ブロッキングIOの混入を防ぐガードを立てる。
+3. [x] `src/domain/event.rs` に `LifeEvent` 構造体を定義し、データ整合性のための `Serial` 派生を実装する。
+4. [x] `LifeEvent` に `id: Uuid` (v7) を採用し、データベース挿入前の時系列順序をアプリレベルで保証する。
+5. [x] `LifeEvent` に `source: SourceType` enum を導入し、物理デバイスと仮想イベントの出自を厳格に正規化する。
+6. [x] `SourceType` に `WindowsAudio`, `WindowsActivity`, `UbuntuMonitor` を定義し、マッチングの網羅性を担保する。
+7. [x] `tracing` クレートによる構造化ログを導入し、`println!` による標準出力汚染を完全に禁止する。
+8. [x] `tracing-appender` を使用し、日次でのログローテーションと圧縮保存をバックグラウンドで開始する。
+9. [x] `src/infrastructure/settings.rs` を実装し、環境変数と `config.yaml` の階層的マージを可能にする。
+10. [x] `Settings::new()` にて、欠落した設定項目に対する安全なフォールバックと警告通知ロジックを実装する。
+11. [x] `panic!` の発生源を `grep` で走査し、全ての未回復エラーを `anyhow::Result` 伝播へリファクタリングする。
+12. [x] CI設定に `clippy` の `unwrap_used` 制限を追加し、強制的に `expect` または `match` を要求する。
+13. [x] `src/use_cases/` のモジュール境界を再定義し、副作用を持つ関数の注入（DI）を徹底する。
+14. [x] 外部IO（ファイル/ネットワーク）を `Trait` で抽象化し、ビジネスロジックの単体テスト可能性を100%にする。
 15. [ ] `cargo-modules` を用いて、非公開モジュールへの不正なアクセスがないか依存関係グラフを検証する。
 
 ### Phase 2: Windows Audio Integration (環境音の捕捉)
-16. [ ] Windows 環境で `uv init --app` を実行し、管理された Python 実行環境を構築する。
-17. [ ] `pyproject.toml` に `pyaudio`, `numpy`, `webrtcvad-wheels` 等の音声処理スタックを定義する。
-18. [ ] `src/windows/audio_recorder.py` を実装。マイクからの生波形データを非同期でバッファリングする。
+16. [x] Windows 環境で `uv init --app` を実行し、管理された Python 実行環境を構築する。
+17. [x] `pyproject.toml` に `pyaudio`, `numpy`, `webrtcvad-wheels` 等の音声処理スタックを定義する。
+18. [x] `src/windows/audio_recorder.py` を実装。マイクからの生波形データを非同期でバッファリングする。
 19. [ ] 16kHz, 16bit, Mono の標準フォーマットを強制し、音声解析エンジンとの互換性を確保する。
 20. [ ] 音声パケットを 30ms 単位で `webrtcvad` に提供し、極小遅延での発話検知を実装する。
 21. [ ] 「プレ録音バッファ」を実装。発話検知の 500ms 前からの音声を遡って保存可能にする。
 22. [ ] 無声判定から 1秒間 のマージンを設定し、会話の断片化を防ぐ動的な録音停止ロジックを実装する。
-23. [ ] ファイル名を `vlog_audio_{timestamp}.wav` とし、一時ディレクトリへのアトミックな書き込みを行う。
+23. [x] ファイル名を `vlog_audio_{timestamp}.wav` とし、一時ディレクトリへのアトミックな書き込みを行う。
 24. [ ] 保存完了後、`shutil.move` を用いて Ubuntu 共有フォルダへファイルを移動。転送中の読み取りを防ぐ。
-25. [ ] 全ての例外をキャッチせず、プロセスのクリーンな死を選択する `Crash-Only` 思想の例外ハンドラを置く。
+25. [x] 全ての例外をキャッチせず、プロセスのクリーンな死を選択する `Crash-Only` 思想の例外ハンドラを置く。
 26. [x] `windows/run.bat` を単一エントリポイントとして実装し、環境解決・ビルド・監視再起動（無限再試行）を集約する。
 27. [ ] Windows タスクスケジューラに「ユーザーのログオンに関わらず実行」オプションで登録する。
 28. [ ] プロセスの優先度を `HighPriority` に設定し、他アプリの負荷による録音の瞬きを防止する。
-29: [ ] 起動時に共有フォルダ（SMB/WSL）の接続状態をチェックし、未接続なら exponential backoff で再試行する。
-30: [ ] Windows 側でのメモリ使用量を 20MB 以下に抑えるため、バッファサイズのチューニングを行う。
+29. [ ] 起動時に共有フォルダ（SMB/WSL）の接続状態をチェックし、未接続なら exponential backoff で再試行する。
+30. [ ] Windows 側でのメモリ使用量を 20MB 以下に抑えるため、バッファサイズのチューニングを行う。
 
 ### Phase 3: Windows Activity Logger (実存の軌跡)
 31. [x] Rust で `target: x86_64-pc-windows-msvc` 向けの軽量常駐エージェントを新規作成する。
 32. [x] `windows` クレートを最小構成（Win32_UI, Win32_Foundation）でコンパイルし、ビルドを軽量化する。
 33. [x] Windows メッセージループを監視し、ウィンドウのフォアグラウンド切り替えイベントを検知する。
 34. [x] ウィンドウタイトル取得時、非英語文字の文字化けを防ぐため、広域文字（UTF-16）から UTF-8 への変換を厳密に行う。
-35. [ ] `GetProcessId` を併用し、アプリ名（exe）とタイトルのペアでアクティビティを記録する。
+35. [x] `GetProcessId` を併用し、アプリ名（exe）とタイトルのペアでアクティビティを記録する。
 36. [ ] 同一アプリ内でのタイトル変更を重複除去（Deduplication）し、ログの肥大化を抑制する。
 37. [ ] `UWP` アプリケーションのメディア情報を取得するための `SMTC` リスナーをバックグラウンドで走査する。
 38. [ ] 再生中の楽曲タイトル、アーティスト、再生状態の変化を 1秒 精度で捕捉可能にする。
@@ -64,22 +64,22 @@
 43. [ ] **Input Vital**: キー入力とマウス移動距離を統計化。具体的な内容は記録せず、「活動の熱量」のみを数値化する。
 
 ### Phase 4: Ubuntu Fusion Cortex (統合処理基盤)
-44. [ ] `notify-rs` を用いた高効率なディレクトリウォッチャーを実装。CPU負荷を 1% 未満に維持する。
-45. [ ] `inbox/audio` へのファイル出現をトリガーに、変換ジョブを非同期キューへ投入する。
-46. [ ] `ffmpeg-next` クレートを使用し、Opus コーデックへの変換とメタデータ（録音日時）の埋め込みを行う。
-47. [ ] 変換成功時のみ元ファイルを削除。失敗時は `failed` ディレクトリへ隔離し、自律的な再試行を待つ。
-48. [ ] `src/infrastructure/gemini.rs` を実装。レート上限を考慮したスロットリング機構を備えたクライアントを構築する。
+44. [x] `notify-rs` を用いた高効率なディレクトリウォッチャーを実装。CPU負荷を 1% 未満に維持する。
+45. [x] `inbox/audio` へのファイル出現をトリガーに、変換ジョブを非同期キューへ投入する。
+46. [x] `ffmpeg-next` (または CLI) を使用し、Opus コーデックへの変換とメタデータ（録音日時）の埋め込みを行う。
+47. [x] 変換成功時のみ元ファイルを削除。失敗時は `failed` ディレクトリへ隔離し、自律的な再試行を待つ。
+48. [x] `src/infrastructure/gemini.rs` を実装。レート上限を考慮したスロットリング機構を備えたクライアントを構築する。
 49. [ ] `JSONL` ファイルを tail モードで読み込み、リアルタイムで SQLite のテンポラリテーブルへ同期する。
-50. [ ] 構造化されたログデータを `LifeEvent` ドメインモデルにマッピングし、バリデーションを行う。
-51. [ ] 整合性が壊れたデータは `quarantine` フォルダへ移動し、システム全体の停止を回避する。
-52. [ ] 10年間の稼働に耐えうる SQLite スキーマを設計。インデックス配置を最適化し、検索性能を担保する。
-53. [ ] `sqlx` を導入し、コンパイル時クエリチェックにより SQL 構文エラーをビルド時に全廃する。
-54. [ ] write-ahead logging (WAL) モードを有効化し、読み取りと書き込みの競合を排除する。
+50. [x] 構造化されたログデータを `LifeEvent` ドメインモデルにマッピングし、バリデーションを行う。
+51. [x] 整合性が壊れたデータは `quarantine` フォルダへ移動し、システム全体の停止を回避する。
+52. [x] 10年間の稼働に耐えうる SQLite スキーマを設計。インデックス配置を最適化し、検索性能を担保する。
+53. [x] `sqlx` を導入し、コンパイル時クエリチェックにより SQL 構文エラーをビルド時に全廃する。
+54. [x] write-ahead logging (WAL) モードを有効化し、読み取りと書き込みの競合を排除する。
 
 ### Phase 5: Narrative Synthesis Engine (物語の生成)
 55. [ ] ログの密度から「特筆すべき時間帯」を自動的に抽出するアルゴリズムを実装する。
 56. [ ] 複数のイベント（音声、活動、入力量）を共通のタイムライン上に重畳（Overlay）する。
-57. [ ] `prompts.yaml` から Gemini 3 Flash 向けの高度なシステム指示文をロードする。
+57. [x] `prompts.rs` (or yaml) から Gemini 3 Flash 向けの高度なシステム指示文をロードする。
 59. [ ] Markdown 出力時、フロントマターにその時点の感情スコアや活動メタデータを付与する。
 60. [ ] 月次・年次のディレクトリ構造を自動生成し、ファイルシステムレベルでの整理を自律化する。
 61. [ ] 既存のジャーナル記事に対して、コンテキストを維持したまま自然に追記（Append）するロジックを磨く。
@@ -88,8 +88,8 @@
 
 ### Phase 6: System Reliability & Monitoring (システム信頼性)
 64. [ ] `cargo-bloat` を使用して不要なジェネリクスの展開を抑え、バイナリのメモリ消費を最適化する。
-65. [ ] リリースビルド時に `lto = true`, `opt-level = 'z'` を設定し、実行速度とサイズの均衡を図る。
-66. [ ] `parking_lot` クレートを採用し、ミューテックスのロック競合を最小化する。
+65. [x] リリースビルド時に `lto = true`, `opt-level = 'z'` を設定し、実行速度とサイズの均衡を図る。
+66. [x] `parking_lot` クレートを採用し、ミューテックスのロック競合を最小化する。
 67. [ ] オープンファイル制限 (`ulimit`) を監視し、リソースリークが発生した際に即座に自己修復（再起動）する。
 70. [ ] `systemd` ユニットファイルにて `StartLimitIntervalSec=0` を設定し、無限再起動を許可する。
 
@@ -129,11 +129,11 @@
 プロジェクトの品質を担保するため、以下の基準を全て満たす必要があります。
 
 ### 9-1. Code Quality (コード品質)
-- [ ] **Linting**: `cargo clippy -- -D warnings` が警告を一切許容せずに通過すること。
-- [ ] **Formatting**: `cargo fmt --check` が全てのファイルで統一されたスタイルを保証すること。
-- [ ] **No Comments**: 文脈はコードが語る。一切のコメント（説明、TODO、ドキュメンテーション）を禁ずる。
-- [ ] **No Panic**: 実装コードにおける `unwrap()` の完全な排除。不測の事態には明確な理由を添えた `expect` を用いること。
-- [ ] **Strict Typing**: `String` の乱用を避け、ドメインに特化した `Newtype` パターンを適用し、コンパイル時安全性を最大化すること。
+- [x] **Linting**: `cargo clippy -- -D warnings` が警告を一切許容せずに通過すること。
+- [x] **Formatting**: `cargo fmt --check` が全てのファイルで統一されたスタイルを保証すること。
+- [x] **No Comments**: 文脈はコードが語る。一切のコメント（説明、TODO、ドキュメンテーション）を禁ずる。
+- [x] **No Panic**: 実装コードにおける `unwrap()` の完全な排除。不測の事態には明確な理由を添えた `expect` を用いること。
+- [x] **Strict Typing**: `String` の乱用を避け、ドメインに特化した `Newtype` パターンを適用し、コンパイル時安全性を最大化すること。
 
 ### 9-2. Performance & Footprint (性能・リソース)
 - [ ] **Startup Speed**: プロセス起動から監視開始（Ready状態）まで 150ms を超えないこと。
@@ -144,7 +144,7 @@
 
 ### 9-3. Reliability (信頼性の証)
 - [x] **Zero-Intervention Recovery**: プロセス強制終了後、外部ツールなしで 5秒以内 に元のコンテキストを復元して再開すること。
-- [x] **Disconnected Operation**: 通信遮断中もローカルバッファに全データを保持し、復帰後に順序を保ったまま完全同期すること。
+- [ ] **Disconnected Operation**: 通信遮断中もローカルバッファに全データを保持し、復帰後に順序を保ったまま完全同期すること。
 - [ ] **Longevity**: 1ヶ月間の連続稼働において、物理メモリ・仮想メモリ共に単調増加が一切観測されないこと。
 - [ ] **Data Immutability**: 一度保存されたログは物理的に削除・改ざんされない構造（Append-only）であることをプログラムレベルで保証する。
 
