docs: マイルストーンと仕様書を更新したよっ♪ 📚✨

--- a/docs/milestones/2026-02-18.md
+++ b/docs/milestones/2026-02-18.md
@@ -83,7 +83,7 @@ graph TD
 
 - [] **Mobile & Wearable (The Etended Layer)**
     - [] クラウドストレージ（iCloud/Drive）へのファイル追加を **5秒以内** に検知する `File Watcher` の実装。
-    - [] 異なるサンプリングレートやフォーマットの音声ファイルを、統一された `16kHz Mono` 規格へ自動正規化（Normalize）すること。
+    - [] 異なるサンプリングレートやフォーマットの音声ファイルを、統一された `48kHz Stereo` (Capture) および `16kHz Mono` (Processing) 規格へ自動正規化（Normalize）すること。
 
 ## 4. Definition of Done (完了の定義: チェックリスト)
 
