--- a/docs/milestones/2026-02-19.md
+++ b/docs/milestones/2026-02-19.md
@@ -35,7 +35,7 @@
 16. [x] Windows 環境で `uv init --app` を実行し、管理された Python 実行環境を構築する。
 17. [x] `pyproject.toml` に `pyaudio`, `numpy`, `webrtcvad-wheels` 等の音声処理スタックを定義する。
 18. [x] `src/windows/audio_recorder.py` を実装。マイクからの生波形データを非同期でバッファリングする。
-19. [ ] 16kHz, 16bit, Mono の標準フォーマットを強制し、音声解析エンジンとの互換性を確保する。
+19. [ ] 48kHz, 16bit, Stereo の標準フォーマットを強制し、ハードウェアの物理的実体と Layer 3 の掟を遵守する。
 20. [ ] 音声パケットを 30ms 単位で `webrtcvad` に提供し、極小遅延での発話検知を実装する。
 21. [ ] 「プレ録音バッファ」を実装。発話検知の 500ms 前からの音声を遡って保存可能にする。
 22. [ ] 無声判定から 1秒間 のマージンを設定し、会話の断片化を防ぐ動的な録音停止ロジックを実装する。
